- Fixed m_sjoin bug with banlist propagation
- Fixed compile problem with non-glob/win32 systems (sunos 4.1) found by rshurr
- Fixed secure channel only (+z) sending ERR_BANNEDFROMCHAN
- WinNT/2k/XP service support added
  This should currently be considered EXPERIMENTAL
  To use this you use the unreal.exe utility:
    unreal install -installs the service
    unreal uninstall -uninstalls the service
    unreal start -starts the service
    unreal stop -stops the service
    unreal restart -restarts the service
    unreal rehash -rehashes the config file
  Config errors are now logged to service.log when in service mode.
- Added a win32 installer script (for Inno Setup with ISX)
- Removed a reference to TechAdmins in makeconf, reported by Zerwas (#0000234)
- Added a new debugger for win32 this version is NT Service compatible, logs to service.log
  when a crash occurs while running in service mode. The new debugger requires dbghelp.dll
  version 5.0 or newer. Included natively on Win2k/XP and available as redistributable for
  other versions. Also removes StackTrace
- Added src/win32/gpl.rtf (used for installer) made installer download dbghelp.dll if needed
- Added an installer script to generate the Win32 SSL version
- Made the win32 uninstaller remove dbghelp.dll if it was added when uninstalling
- Added a #ifdef _WIN32 for extern BOOL IsService; in ircd.c that made compile break
  on non WIN32 systems
- Depricated AKILL/RAKILL and made them alias to TKL G +/- - for normal users they
  just reply that the commands are depricated. Server compatiblity is maintained. 
  Eventually it will just be removed. Thank god for modules.
- Fixed a silly bug with regards to matching against compressed IPs in link {} checking
- Added some release notes with regards to scanners
- Removed s_segv handler
- Changed ./update to use update.unrealircd.com
- Made ./configure check if it has parameters, and error if it don't.